--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangeformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangeformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFormatData:interface'
-    summary: <span data-ttu-id="8be79-101">描述通过调用返回的数据的接口`rangeFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="8be79-101">An interface describing the data returned by calling `rangeFormat.toJSON()`</span></span><!-- --><span data-ttu-id="8be79-102">.</span><span class="sxs-lookup"><span data-stu-id="8be79-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`rangeFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.RangeFormatData
     fullName: Excel.Interfaces.RangeFormatData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFormatData#wrapText:member'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#borders:member'
     summary: |-
-      <span data-ttu-id="8be79-103">应用于整个区域的 Border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="8be79-103">Collection of border objects that apply to the overall range.</span></span> <span data-ttu-id="8be79-104">只读。</span><span class="sxs-lookup"><span data-stu-id="8be79-104">Read-only.</span></span>
+      应用于整个区域的 Border 对象的集合。
 
-      <span data-ttu-id="8be79-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#borders~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#columnWidth:member'
     summary: |-
-      <span data-ttu-id="8be79-106">获取或设置区域内的所有列的宽度。</span><span class="sxs-lookup"><span data-stu-id="8be79-106">Gets or sets the width of all colums within the range.</span></span> <span data-ttu-id="8be79-107">如果列宽不统一，则返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="8be79-107">If the column widths are not uniform, null will be returned.</span></span>
+      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
-      <span data-ttu-id="8be79-108">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnWidth
     fullName: columnWidth
     langs:
@@ -53,9 +53,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#fill:member'
     summary: |-
-      <span data-ttu-id="8be79-109">返回在整个区域内定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="8be79-109">Returns the fill object defined on the overall range.</span></span> <span data-ttu-id="8be79-110">只读。</span><span class="sxs-lookup"><span data-stu-id="8be79-110">Read-only.</span></span>
+      返回在整个区域内定义的 fill 对象。
 
-      <span data-ttu-id="8be79-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#font:member'
     summary: |-
-      <span data-ttu-id="8be79-112">返回在整个区域内定义的 Font 对象。</span><span class="sxs-lookup"><span data-stu-id="8be79-112">Returns the font object defined on the overall range.</span></span> <span data-ttu-id="8be79-113">只读。</span><span class="sxs-lookup"><span data-stu-id="8be79-113">Read-only.</span></span>
+      返回在整个区域内定义的 Font 对象。
 
-      <span data-ttu-id="8be79-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -83,9 +83,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFontData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="8be79-115">表示指定对象的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="8be79-115">Represents the horizontal alignment for the specified object.</span></span> <span data-ttu-id="8be79-116">有关详细信息，请参阅 HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="8be79-116">See Excel.HorizontalAlignment for details.</span></span>
+      表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
 
-      <span data-ttu-id="8be79-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -98,9 +98,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#protection:member'
     summary: |-
-      <span data-ttu-id="8be79-118">返回某一区域的格式 protection 对象。</span><span class="sxs-lookup"><span data-stu-id="8be79-118">Returns the format protection object for a range.</span></span> <span data-ttu-id="8be79-119">只读。</span><span class="sxs-lookup"><span data-stu-id="8be79-119">Read-only.</span></span>
+      返回某一区域的格式 protection 对象。
 
-      <span data-ttu-id="8be79-120">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-120">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -113,9 +113,9 @@ items:
           - 'excel!Excel.Interfaces.FormatProtectionData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#rowHeight:member'
     summary: |-
-      <span data-ttu-id="8be79-121">获取或设置区域中所有行的高度。</span><span class="sxs-lookup"><span data-stu-id="8be79-121">Gets or sets the height of all rows in the range.</span></span> <span data-ttu-id="8be79-122">如果行高不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="8be79-122">If the row heights are not uniform, null will be returned.</span></span>
+      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
-      <span data-ttu-id="8be79-123">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-123">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHeight
     fullName: rowHeight
     langs:
@@ -128,9 +128,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#textOrientation:member'
     summary: |-
-      <span data-ttu-id="8be79-124">获取或设置区域内的所有单元格的文本方向。</span><span class="sxs-lookup"><span data-stu-id="8be79-124">Gets or sets the text orientation of all the cells within the range.</span></span> <span data-ttu-id="8be79-125">文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。</span><span class="sxs-lookup"><span data-stu-id="8be79-125">The text orientation should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span> <span data-ttu-id="8be79-126">如果区域中的方向不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="8be79-126">If the orientation within a range are not uniform, then null will be returned.</span></span>
+      区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
 
-      <span data-ttu-id="8be79-127">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-127">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -143,9 +143,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatData#useStandardHeight:member'
     summary: |-
-      <span data-ttu-id="8be79-128">确定 Range 对象的行高是否等于工作表的标准行高。</span><span class="sxs-lookup"><span data-stu-id="8be79-128">Determines if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="8be79-129">如果 Range 对象的行高等于工作表的标准高度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="8be79-129">Returns True if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="8be79-130">如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="8be79-130">Returns Null if the range contains more than one row and the rows aren't all the same height.</span></span> <span data-ttu-id="8be79-131">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="8be79-131">Returns False otherwise.</span></span>
+      确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="8be79-132">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-132">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -158,9 +158,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatData#useStandardWidth:member'
     summary: |-
-      <span data-ttu-id="8be79-133">指示 Range 对象的列宽是否等于工作表的标准宽度。</span><span class="sxs-lookup"><span data-stu-id="8be79-133">Indicates whether the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="8be79-134">如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="8be79-134">Returns True if the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="8be79-135">如果区域中包含多个列，并且各列的高度不相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="8be79-135">Returns Null if the range contains more than one column and the columns aren't all the same height.</span></span> <span data-ttu-id="8be79-136">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="8be79-136">Returns False otherwise.</span></span>
+      指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="8be79-137">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-137">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -173,9 +173,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="8be79-138">表示指定对象的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="8be79-138">Represents the vertical alignment for the specified object.</span></span> <span data-ttu-id="8be79-139">有关详细信息，请参阅 VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="8be79-139">See Excel.VerticalAlignment for details.</span></span>
+      表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      <span data-ttu-id="8be79-140">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-140">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -188,9 +188,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatData#wrapText:member'
     summary: |-
-      <span data-ttu-id="8be79-141">指示 Excel 是否将对象中的文本换行。</span><span class="sxs-lookup"><span data-stu-id="8be79-141">Indicates if Excel wraps the text in the object.</span></span> <span data-ttu-id="8be79-142">指示整个区域不具有统一换行设置的空值</span><span class="sxs-lookup"><span data-stu-id="8be79-142">A null value indicates that the entire range doesn't have uniform wrap setting</span></span>
+      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
-      <span data-ttu-id="8be79-143">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8be79-143">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
