--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.tablerowloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.tablerowloadoptions.yml
@@ -2,11 +2,11 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableRowLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="9192a-101">表示表中的行。</span><span class="sxs-lookup"><span data-stu-id="9192a-101">Represents a row in a table.</span></span>
+      表示表中的行。
 
-      <span data-ttu-id="9192a-102">请注意，与在添加新行/列之前的区域或列不同，TableRow 对象表示表行的物理位置，而不是数据。</span><span class="sxs-lookup"><span data-stu-id="9192a-102">Note that unlike Ranges or Columns, which will adjust if new rows/columns are added before them, a TableRow object represent the physical location of the table row, but not the data.</span></span> <span data-ttu-id="9192a-103">也就是说，如果对数据进行排序或添加新行，则表行将继续指向为其创建该索引的索引。</span><span class="sxs-lookup"><span data-stu-id="9192a-103">That is, if the data is sorted or if new rows are added, a table row will continue to point at the index for which it was created.</span></span>
+      请注意，与在添加新行/列之前的区域或列不同，TableRow 对象表示表行的物理位置，而不是数据。 也就是说，如果对数据进行排序或添加新行，则表行将继续指向为其创建该索引的索引。
 
-      <span data-ttu-id="9192a-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9192a-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableRowLoadOptions
     fullName: Excel.Interfaces.TableRowLoadOptions
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.Interfaces.TableRowLoadOptions#index:member'
       - 'excel!Excel.Interfaces.TableRowLoadOptions#values:member'
   - uid: 'excel!Excel.Interfaces.TableRowLoadOptions#$all:member'
-    summary: '<span data-ttu-id="9192a-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="9192a-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="9192a-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="9192a-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="9192a-107">).</span><span class="sxs-lookup"><span data-stu-id="9192a-107"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableRowLoadOptions#index:member'
     summary: |-
-      <span data-ttu-id="9192a-108">返回表的行集合内行的索引编号。</span><span class="sxs-lookup"><span data-stu-id="9192a-108">Returns the index number of the row within the rows collection of the table.</span></span> <span data-ttu-id="9192a-109">从零开始编制索引。</span><span class="sxs-lookup"><span data-stu-id="9192a-109">Zero-indexed.</span></span> <span data-ttu-id="9192a-110">只读。</span><span class="sxs-lookup"><span data-stu-id="9192a-110">Read-only.</span></span>
+      返回表的行集合内行的索引编号。 从零开始编制索引。
 
-      <span data-ttu-id="9192a-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9192a-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: index
     fullName: index
     langs:
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.TableRowLoadOptions#values:member'
     summary: |-
-      <span data-ttu-id="9192a-112">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="9192a-112">Represents the raw values of the specified range.</span></span> <span data-ttu-id="9192a-113">返回的数据可能是字符串、数字，也可能是布尔值。</span><span class="sxs-lookup"><span data-stu-id="9192a-113">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="9192a-114">包含错误的单元格将返回错误字符串。</span><span class="sxs-lookup"><span data-stu-id="9192a-114">Cells that contain an error will return the error string.</span></span>
+      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      <span data-ttu-id="9192a-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9192a-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: values
     fullName: values
     langs:
