--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.datavalidationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.datavalidationupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DataValidationUpdateData:interface'
-    summary: '<span data-ttu-id="bb4fd-101">一个用于更新 DataValidation 对象上的数据的接口，可用于`dataValidation.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="bb4fd-101">An interface for updating data on the DataValidation object, for use in `dataValidation.set({ ... })`</span></span><!-- --><span data-ttu-id="bb4fd-102">.</span><span class="sxs-lookup"><span data-stu-id="bb4fd-102"></span></span>'
+    summary: '一个用于更新 DataValidation 对象上的数据的接口，可用于`dataValidation.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.DataValidationUpdateData
     fullName: Excel.Interfaces.DataValidationUpdateData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.DataValidationUpdateData#rule:member'
   - uid: 'excel!Excel.Interfaces.DataValidationUpdateData#errorAlert:member'
     summary: |-
-      <span data-ttu-id="bb4fd-103">用户输入无效数据时，出现错误警报。</span><span class="sxs-lookup"><span data-stu-id="bb4fd-103">Error alert when user enters invalid data.</span></span>
+      用户输入无效数据时，出现错误警报。
 
-      <span data-ttu-id="bb4fd-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb4fd-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: errorAlert
     fullName: errorAlert
     langs:
@@ -30,9 +30,9 @@ items:
           - 'excel!Excel.DataValidationErrorAlert:interface'
   - uid: 'excel!Excel.Interfaces.DataValidationUpdateData#ignoreBlanks:member'
     summary: |-
-      <span data-ttu-id="bb4fd-105">忽略空白：不会对空白单元格执行数据严重，默认为 true。</span><span class="sxs-lookup"><span data-stu-id="bb4fd-105">Ignore blanks: no data validation will be performed on blank cells, it defaults to true.</span></span>
+      指定是否对空单元格执行数据验证，其默认值为 true。
 
-      <span data-ttu-id="bb4fd-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb4fd-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: ignoreBlanks
     fullName: ignoreBlanks
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.DataValidationUpdateData#prompt:member'
     summary: |-
-      <span data-ttu-id="bb4fd-107">当用户选择单元格时提示。</span><span class="sxs-lookup"><span data-stu-id="bb4fd-107">Prompt when users select a cell.</span></span>
+      当用户选择单元格时提示。
 
-      <span data-ttu-id="bb4fd-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb4fd-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: prompt
     fullName: prompt
     langs:
@@ -60,9 +60,9 @@ items:
           - 'excel!Excel.DataValidationPrompt:interface'
   - uid: 'excel!Excel.Interfaces.DataValidationUpdateData#rule:member'
     summary: |-
-      <span data-ttu-id="bb4fd-109">包含不同类型的数据验证条件的数据有效性规则。</span><span class="sxs-lookup"><span data-stu-id="bb4fd-109">Data validation rule that contains different type of data validation criteria.</span></span>
+      包含不同类型的数据验证条件的数据有效性规则。
 
-      <span data-ttu-id="bb4fd-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bb4fd-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rule
     fullName: rule
     langs:
